# 3ds-template

./: .gitattributes  .gitignore  3ds.cbp  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  README.md
buildtools/: makerom.7z
resources/: AppInfo  template.rsf
romfs/: README.md
scripts/: clean_run.bat  run.bat  upload_fbi.bat  upload_hb.bat
source/: main.c  main.cpp  main.h  vshader.v.pica
source/graphics/: Output.cpp  Output.h
